# pydictsql

./: LICENSE.txt  README.md  example.py  pyproject.toml
pydictsql/: __init__.py  dictfilter.py  exceptions.py  parser.py  tokeniser.py
tests/: test_dictfilter.py  test_parser.py  test_tokeniser.py  test_tokentype.py
