[tool.poetry]
name = "pydictsql"
version = "0.1.0"
description = ""
authors = ["Martyn Pearson <martynjpearson@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
